--- a/src/components/Email.astro
+++ b/src/components/Email.astro
@@ -2,7 +2,7 @@
 const email = "victoralbertomhp@gmail.com";
 ---
 
-<div class="fixed right-10 bottom-0 left-auto z-10 hidden w-10 md:block">
+<div class="fixed right-5 bottom-0 left-auto z-10 hidden w-10 md:block lg:right-10">
   <div class="link after:my:auto relative flex flex-col items-center justify-center">
     <a
       class="font-brand hover:text-dark focus-visible:text-dark mx-5 my-auto p-1 text-gray-800 transition-all hover:-translate-y-1 focus-visible:-translate-y-1"
