--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,8 +2,8 @@
   <div class="space-y-8">
     <div class="space-y-4">
       <h1 class="text-dark font-bold">Hi, my name is</h1>
-      <h2 class="text-shadow-effect font-recoleta text-7xl">Victor Alberto.</h2>
-      <h3 class="font-recoleta text-5xl">I like to build things.</h3>
+      <h2 class="text-shadow-effect font-recoleta text-5xl md:text-7xl">Victor Alberto.</h2>
+      <h3 class="font-recoleta text-3xl md:text-5xl">I craft ideas into code.</h3>
     </div>
     <div>
       <p class="max-w-[60ch] text-lg">
