--- a/src/components/Subtitle.astro
+++ b/src/components/Subtitle.astro
@@ -1,4 +1,4 @@
-<h2 class="font-recoleta w-100 relative flex items-center text-2xl pb-8 whitespace-nowrap lg:text-4xl">
+<h2 class="font-recoleta w-full relative flex items-center text-3xl pb-8 whitespace-nowrap lg:text-4xl">
   <slot />
 </h2>
 
@@ -14,7 +14,7 @@
     background-color: var(--color-gray-800);
   }
 
-  @media (min-width: 64em) {
+  @media (min-width: 48em) {
     h2::after {
       width: 300px;
     }
