--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ const skills = "https://skillicons.dev/icons?i=python,go,typescript,flask,expres
 ---
 
 <BaseLayout>
-  <main class="wrapper flex flex-col items-start justify-center p-8" transition:animate="slide">
+  <main class="wrapper flex flex-col items-start justify-center py-8 md:px-8" transition:animate="slide">
     <Subtitle>About Me</Subtitle>
     <div class="flex flex-col-reverse justify-between gap-4 lg:grid lg:grid-cols-2 lg:gap-12">
       <div class="flex flex-col gap-8">
