--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,8 +5,10 @@ import Icon from "../components/Icon.astro";
 ---
 
 <BaseLayout>
-  <main class="wrapper flex items-center justify-center" transition:animate="slide">
-    <section class="w-full h-fit flex flex-col text-center justify-center items-center gap-12 border-t-2 border-b-2 border-gray-800 py-20 px-6 lg:flex-wrap lg:p-28">
+  <main class="wrapper grid place-items-center md:px-8" transition:animate="slide">
+    <section
+      class="flex w-full h-fit flex-col items-center justify-center gap-12 border-t-2 border-b-2 border-gray-800 py-20 text-center md:p-20 lg:flex-wrap lg:p-28"
+    >
       <h2 class="font-recoleta text-3xl md:text-4xl">Interested in working together?</h2>
       <p class="max-w-[50ch]">
         I'm on the lookout for new opportunities, and my inbox is open 24/7. Whether you've got questions or just want to say hi, I'll do my
