--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -7,12 +7,17 @@ const currentPage = Astro.url.pathname;
 ---
 
 <nav
-  class="font-brand z-10 my-auto w-full border-b-2 border-gray-800 bg-gray-50 px-2 md:flex md:items-center md:justify-between md:gap-4 md:px-8 md:py-2"
+  class="font-brand z-10 w-full border-b-2 border-gray-800 bg-gray-50 p-4 md:flex md:items-center md:justify-between md:gap-4 md:px-10 md:py-2"
 >
-  <div class="md:pd-0 flex justify-between gap-2 px-2 py-4">
-    <a class="hover:text-dark focus-visible:text-dark flex items-center gap-2 transition-colors text-xl" href="/">
-      <Icon icon="terminal" size="1.6em" />
-      Victor.dev
+  <div class="flex items-center justify-between gap-2">
+    <a
+      class="flex items-center gap-2 transition-transform duration-300 hover:scale-110"
+      href="/"
+      title="Ir a la página principal"
+      aria-label="Ir a la página principal"
+    >
+      <Icon icon="code" color="#a855f7" size="2.5em" />
+      <span class="text-2xl">victor.dev</span>
     </a>
     <button
       id="hamburger"
@@ -27,14 +32,17 @@ const currentPage = Astro.url.pathname;
     class="fixed top-0 left-0 z-40 flex h-full w-full translate-x-full flex-col bg-gray-50 transition-transform md:contents"
   >
     <ul
-      class="m-0 flex flex-1 flex-col items-center justify-center gap-16 p-8 text-2xl md:flex-row md:justify-end md:border-0 md:p-4 md:text-base"
+      class="m-0 flex flex-1 flex-col items-center justify-center gap-16 p-8 text-2xl md:flex-row md:justify-end md:border-0 md:p-4 md:text-xl"
     >
       {
         pages.map(({ label, href }) => (
           <li
-            class:list={["hover:underline-lift focus-visible:underline-lift transition-all", currentPage == href ? "underline-lift" : ""]}
+            class:list={[
+              "hover:underline-lift focus-visible:underline-lift transition-all",
+              currentPage == href ? "underline-lift" : "",
+            ]}
           >
-            <a class="text-gray-800" {href}>
+            <a class="link text-gray-800" {href}>
               {label}
             </a>
           </li>
@@ -47,7 +55,7 @@ const currentPage = Astro.url.pathname;
     <div class="flex justify-around gap-4 border-t-2 border-gray-800 bg-gray-50 p-4 text-2xl md:hidden">
       {
         socialsArray.map(({ href, icon, label }) => (
-          <a class="link flex p-2 text-gray-800 transition-colors" href={href} target="_blank" rel="noopener noreferrer">
+          <a class="flex p-2 text-gray-800 transition-colors" href={href} target="_blank" rel="noopener noreferrer">
             <span class="sr-only">{label}</span>
             <Icon icon={icon} size="1.5em" />
           </a>
@@ -58,6 +66,8 @@ const currentPage = Astro.url.pathname;
 </nav>
 
 <script>
+  import { navigate } from "astro:transitions/client";
+
   function initMobileMenu() {
     const body = document.body;
     const btn = document.querySelector("#hamburger");
@@ -87,6 +97,8 @@ const currentPage = Astro.url.pathname;
         if (isMenuOpened()) {
           event.preventDefault();
           toggleMenu();
+          const page = link.getAttribute("href");
+          setTimeout(() => navigate(page), 250);
         }
       });
     });
