--- a/src/components/Pill.astro
+++ b/src/components/Pill.astro
@@ -1,1 +1,1 @@
-<div class="bg-light/50 font-bold text-dark rounded-full px-4 py-2 text-xs whitespace-nowrap"><slot /></div>
+<div class="bg-light/50 font-medium text-dark rounded-full px-4 py-2 text-xs whitespace-nowrap"><slot /></div>
