--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -3,7 +3,7 @@ import Icon from "./Icon.astro";
 import { socialsArray } from "../config.ts";
 ---
 
-<div class="fixed right-auto bottom-0 left-10 z-10 hidden w-10 md:block">
+<div class="fixed right-auto bottom-0 left-5 z-10 hidden w-10 md:block lg:left-10">
   <div class="relative flex flex-col items-center justify-center">
     <ul class="flex flex-col gap-6 text-2xl">
       {
