--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -8,10 +8,10 @@ const projects = await getCollection("proyects");
 ---
 
 <BaseLayout>
-  <main class="wrapper stack gap-15 px-8 py-12 lg:gap-20" transition:animate="slide">
+  <main class="wrapper py-12 md:px-8 lg:gap-20" transition:animate="slide">
     <section>
       <Subtitle>Work</Subtitle>
-      <ul class="stack gap-10 lg:gap-15">
+      <ul class="flex flex-col gap-10 lg:gap-15">
         {
           projects.map((p) => (
             <li>
