--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -17,7 +17,7 @@ const currentPage = Astro.url.pathname;
       title="Ir a la página principal"
       aria-label="Ir a la página principal"
     >
-      <Icon icon="code" color="#a855f7" size="2.5em" />
+      <Icon icon="code" color="#73162f" size="2.5em" />
       <span class="text-2xl">victor.dev</span>
     </a>
     <button
@@ -124,7 +124,7 @@ const currentPage = Astro.url.pathname;
 </script>
 
 <style>
-  :global(body[data-menu-open]) {
+  :global(body[data-menu-open="true"]) {
     overflow-y: hidden;
   }
 </style>
