--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import { socialsArray } from "../config.ts";
 const currentYear = new Date().getFullYear();
 
 // Remove discord from the footer
-const socialsFooter = socialsArray.slice(1)
+const socialsFooter = socialsArray.slice(1);
 ---
 
 <footer
