--- a/src/components/Subtitle.astro
+++ b/src/components/Subtitle.astro
@@ -1,4 +1,6 @@
-<h2 class="font-recoleta w-full relative flex items-center text-3xl pb-8 whitespace-nowrap lg:text-4xl">
+<h2
+  class="font-recoleta relative flex w-full items-center pb-8 text-3xl whitespace-nowrap lg:text-4xl"
+>
   <slot />
 </h2>
 
