--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,12 +7,12 @@ import Icon from "../components/Icon.astro";
 <BaseLayout>
   <main class="wrapper grid place-items-center md:px-8" transition:animate="slide">
     <section
-      class="flex w-full h-fit flex-col items-center justify-center gap-12 border-t-2 border-b-2 border-gray-800 py-20 text-center md:p-20 lg:flex-wrap lg:p-28"
+      class="flex h-fit w-full flex-col items-center justify-center gap-12 border-t-2 border-b-2 border-gray-800 py-20 text-center md:p-20 lg:flex-wrap lg:p-28"
     >
       <h2 class="font-recoleta text-3xl md:text-4xl">Interested in working together?</h2>
       <p class="max-w-[50ch]">
-        I'm on the lookout for new opportunities, and my inbox is open 24/7. Whether you've got questions or just want to say hi, I'll do my
-        best to get back to you as soon as possible!
+        I'm on the lookout for new opportunities, and my inbox is open 24/7. Whether you've got
+        questions or just want to say hi, I'll do my best to get back to you as soon as possible!
       </p>
       <Button href="mailto:victoralbertomhp@gmail.com" color="var(--color-light)">
         Send Me a Message
