--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,8 +17,8 @@ import Button from "../components/Button.astro";
         </div>
         <div>
           <p class="max-w-[60ch] text-lg">
-            I’m a software engineering student focused on creating user-friendly and reliable digital solutions. I’m passionate about
-            learning and improving every day.
+            I’m a software engineering student focused on creating user-friendly and reliable
+            digital solutions. I’m passionate about learning and improving every day.
           </p>
         </div>
       </div>
