--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -7,7 +7,10 @@ interface Props {
   description?: string | undefined;
 }
 
-const { title = "Victor Alberto", description = "The personal site of software developer Victor Alberto" } = Astro.props;
+const {
+  title = "Victor Alberto",
+  description = "The personal site of software developer Victor Alberto",
+} = Astro.props;
 ---
 
 <meta charset="UTF-8" />
@@ -22,4 +25,5 @@ const { title = "Victor Alberto", description = "The personal site of software d
   href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,400;0,700;1,400&family=Rubik:wght@500;600&display=swap"
   rel="stylesheet"
 />
+
 <ClientRouter />
