--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -38,7 +38,10 @@ const currentPage = Astro.url.pathname;
       {
         pages.map(({ label, href }) => (
           <li
-            class:list={["hover:underline-lift focus-visible:underline-lift transition-all", currentPage == href ? "underline-lift" : ""]}
+            class:list={[
+              "hover:underline-lift focus-visible:underline-lift transition-all",
+              currentPage == href ? "underline-lift" : "",
+            ]}
           >
             <a class="link text-gray-800" {href}>
               {label}
@@ -50,10 +53,17 @@ const currentPage = Astro.url.pathname;
         <Resume>Resume</Resume>
       </div>
     </ul>
-    <div class="flex justify-around gap-4 border-t-2 border-gray-800 bg-gray-50 p-4 text-2xl md:hidden">
+    <div
+      class="flex justify-around gap-4 border-t-2 border-gray-800 bg-gray-50 p-4 text-2xl md:hidden"
+    >
       {
         socialsArray.map(({ href, icon, label }) => (
-          <a class="flex p-2 text-gray-800 transition-colors" href={href} target="_blank" rel="noopener noreferrer">
+          <a
+            class="flex p-2 text-gray-800 transition-colors"
+            href={href}
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <span class="sr-only">{label}</span>
             <Icon icon={icon} size="1.5em" />
           </a>
