--- a/src/components/Pill.astro
+++ b/src/components/Pill.astro
@@ -1,1 +1,3 @@
-<div class="bg-light/75 font-brand text-dark rounded-full px-4 py-2 text-xs whitespace-nowrap"><slot /></div>
+<div class="bg-light/75 font-brand text-dark rounded-full px-4 py-2 text-xs whitespace-nowrap">
+  <slot />
+</div>
