--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,8 +14,8 @@
 
 @theme {
   /* Fonts */
-  --font-system: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
+  --font-system: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+    Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   --font-body: "Public Sans", var(--font-system);
   --font-brand: Rubik, var(--font-system);
   --font-recoleta: Recoleta, var(--font-system);
@@ -96,8 +96,8 @@
   padding-bottom: 0.35rem;
   border-bottom: 0.4rem solid var(--color-dark);
   box-shadow: 0 0.8rem 0 -0.4rem var(--color-regular);
-  
-  @media(min-width: 64em) {
+
+  @media (min-width: 64em) {
     border-bottom: 0.2rem solid var(--color-dark);
     box-shadow: 0 0.4rem 0 -0.2rem var(--color-regular);
   }
@@ -107,7 +107,6 @@
 ::-webkit-scrollbar {
   width: 0.5rem;
 }
-      
 
 ::-webkit-scrollbar-track {
   background-color: var(--color-gray-50);
