--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import Button from "../components/Button.astro";
       </div>
     </div>
     <div class="hero-img">
-      <img src="/assets/profile.jpeg" alt="" />
+      <img src="/assets/profile.webp" alt="Victor Alberto in the beach!!!" />
     </div>
   </main>
 </BaseLayout>
