Change og site name

--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -37,7 +37,7 @@ const canonicalURL = new URL(determineCanonicalURL(), Astro.site);
 <meta property="og:image" content="https://victormhp.dev/assets/profile.webp"/>
 <meta property="og:description" content={description} />
 <meta property="og:url" content={Astro.url} />
-<meta property="og:site_name" content="Victor Alberto" />
+<meta property="og:site_name" content="Hi, I'm Victor" />
 <meta property="og:type" content="website" />
 <meta property="og:locale" content="es_MX" />
 
