--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,10 +21,6 @@
   --font-recoleta: Recoleta, var(--font-system);
 
   /* Colors */
-  /* --color-light: #e9d5ff; */
-  /* --color-regular: #d8b4fe; */
-  /* --color-dark: #a855f7; */
-
   --color-light: #ffe3e9;
   --color-regular: #ffabba;
   --color-dark: #73162f;
@@ -52,6 +48,11 @@
   @media (min-width: 48em) {
     --wrapper-padding: 10rem;
   }
+}
+
+@utility grid-responsive {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
 
 @utility text-shadow-effect {
