--- a/src/components/MainProjectCard.astro
+++ b/src/components/MainProjectCard.astro
@@ -6,8 +6,19 @@ import { type Project } from "../content/config";
 const { data }: Project = Astro.props.project;
 ---
 
-<div class="border-shadow relative flex h-full flex-col p-8">
-  <div class="flex h-full flex-col gap-8">
+<div class="border-shadow lg:grid lg:grid-cols-2 lg:items-center lg:gap-6">
+  <div>
+    <a href={data.deploy_url ?? data.github_url} target="_blank" rel="noopener noreferrer">
+      <img
+        class="rounded border border-zinc-200"
+        src={data.img}
+        alt={data.img_alt}
+        loading="lazy"
+        decoding="async"
+      />
+    </a>
+  </div>
+  <div class="flex h-full flex-col justify-start gap-8">
     <header class="font-brand">
       <p class="text-dark text-base">{data.subtitle}</p>
       <h3 class="text-2xl text-gray-800">{data.title}</h3>
