Fix wokr stytles

--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -28,7 +28,7 @@ const otherProjects = projects.filter((p) => !p.data.order);
     </section>
     <section class="flex flex-col gap-8">
       <h3
-        class="font-recoleta relative flex w-full items-center gap-4 text-center text-2xl whitespace-nowrap"
+        class="font-recoleta relative flex w-full items-center gap-4 text-center text-2xl whitespace-nowrap lg:text-3xl"
       >
         Other Noteworthy Projects
       </h3>
