--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ const socialsFooter = socialsArray.slice(1);
 ---
 
 <footer
-  class="flex h-auto min-w-[50px] flex-col items-center justify-center gap-1 px-6 py-4 text-center text-sm text-zinc-500 md:flex-row md:gap-4"
+  class="flex h-auto min-w-[50px] flex-col items-center justify-center gap-1 px-6 py-4 text-center text-sm text-gray-500 md:flex-row md:gap-4"
 >
   <div>
     <p>&copy; {currentYear} Victor Alberto</p>
@@ -17,7 +17,7 @@ const socialsFooter = socialsArray.slice(1);
     {
       socialsFooter.map(({ label, href, icon }) => (
         <a
-          class="text-inherit decoration-zinc-500 underline-offset-4 transition-all hover:underline focus-visible:underline"
+          class="text-inherit decoration-gray-500 underline-offset-4 transition-all hover:underline focus-visible:underline"
           target="_blank"
           href={href}
           rel="noopener noreferrer"
