--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -3,7 +3,7 @@ import Icon from "./Icon.astro";
 import { socialsArray } from "../config.ts";
 ---
 
-<div class="fixed right-auto bottom-0 left-5 z-10 hidden w-10 md:block lg:left-10">
+<div class="fixed right-auto bottom-0 left-5 z-10 hidden w-10 xl:block lg:left-10">
   <div class="relative flex flex-col items-center justify-center">
     <ul class="flex flex-col gap-6 text-2xl">
       {
@@ -16,7 +16,7 @@ import { socialsArray } from "../config.ts";
               rel="noopener noreferrer"
             >
               <span class="sr-only">{label}</span>
-              <Icon icon={icon} size="1.25em" />
+              <Icon icon={icon} size="1.4em" />
             </a>
           </li>
         ))
@@ -29,7 +29,7 @@ import { socialsArray } from "../config.ts";
   ul:after {
     content: "";
     display: block;
-    width: 2px;
+    width: 3px;
     height: 90px;
     margin: 0 auto;
     background-color: var(--color-gray-800);
