--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -25,7 +25,7 @@ const currentPage = Astro.url.pathname;
       class="aria-expanded:text-dark focus-visible:text-dark relative z-50 flex border-0 bg-transparent p-0.5 md:hidden"
     >
       <span class="sr-only">Menu</span>
-      <Icon icon="list" size="1.5em" />
+      <Icon icon="list" color="#73162f" size="1.75em" />
     </button>
   </div>
   <div
