--- a/src/components/Email.astro
+++ b/src/components/Email.astro
@@ -2,10 +2,10 @@
 const email = "victoralbertomhp@gmail.com";
 ---
 
-<div class="fixed right-5 bottom-0 left-auto z-10 hidden w-10 xl:block lg:right-10">
+<div class="fixed right-5 bottom-0 left-auto z-10 hidden w-10 lg:right-10 xl:block">
   <div class="link relative flex flex-col items-center justify-center">
     <a
-      class="font-brand text-lg hover:text-dark focus-visible:text-dark mx-5 my-auto p-1 text-gray-800 transition-all hover:-translate-y-1 focus-visible:-translate-y-1"
+      class="font-brand hover:text-dark focus-visible:text-dark mx-5 my-auto p-1 text-lg text-gray-800 transition-all hover:-translate-y-1 focus-visible:-translate-y-1"
       href=`mailto:${email}`>{email}</a
     >
   </div>
